Quick count bleed fix.

--- a/source/css/scss/app/pages/portfolio.scss
+++ b/source/css/scss/app/pages/portfolio.scss
@@ -368,7 +368,7 @@
 		.lent-count {
 			background-color: $dark-green;
 			color: $white;
-			margin-left: 2rem;
+			margin-left: 0.75rem;
 			padding: 0 1rem 0 1rem;
 			font-size: 1rem;
 			position: absolute;
